# wamr-wasm-libs

./: .gitignore  CMakeLists.txt  build-init-wasi-libc.sh  build-wasi-libc.sh  tools.sh  version
patch/libiconv-1.17/: 0000-block-getdtablesize.patch
patch/libxml2-2.10.2/: 0000-fix-nanohttp.patch
patch/wasi-libc-30094b6e/: 0000-custom-pthread-type.patch  0002-inet-h-add-legacy-func.patch  0003-fix-sockaddr-un.patch  0004-fix-stdio-h.patch  0005-fix-unistd-h.patch  0007-custom-errno.patch  0008-custom-wasi-findpath-tls.patch  0009-sys-stat-h.patch  0010-fix-stdlib-h.patch  0011-extend-fcntl.patch  0013-fix-poll-h.patch  0014-fix-semaphore-h.patch  0015-fix-pthread-impl-h.patch  0016-fix-pthread-attr.patch
patch/wasi-libc-38f48942/: 0003-fix-sockaddr-un.patch
patch/wasi-libc-957c7113/: 0003-fix-sockaddr-un.patch  0006-extend-sysconf.patch  0008-pthread-stack.patch
patch/wasi-libc-b4814997/: 0004-fix-stdio-h.patch  0007-pthread-ext.patch
patch/wasi-libc-ebd32400/: 0007-pthread-ext.patch
patch/wasi-libc-f2a35a45/: 0005-fix-unistd-h.patch
patch/wasi-libc-fb9c9223/: 0002-inet-h-add-legacy-func.patch  0012-fix-signal-h.patch
test/: test-iconv.cpp  test-microhttpd.cpp  test-misc.cpp  test-popen.cpp  test-socket.cpp  test-sqlite.cpp  test-uuid.cpp
thirdparty-libs/: build-all-libs.sh  build-brotli.sh  build-bzip2.sh  build-cares.sh  build-curl.sh  build-libiconv.sh  build-libmicrohttpd.sh  build-libpng.sh  build-libuuid.sh  build-libxml2.sh  build-lzma.sh  build-nghttp2.sh  build-openssl.sh  build-sqlite3.sh  build-zlib.sh  build-zstd.sh  config.sh
wamr-ext-libc/: include-all.c.in
wamr-ext-libc/include/: dlfcn.h  netdb.h  pthread.h  resolv.h  spawn.h  syslog.h  wamr_ext.h
wamr-ext-libc/include/net/: if.h
wamr-ext-libc/include/sys/: mount.h  socket.h  statvfs.h  wait.h
wamr-ext-libc/internal/: priv_struct_header.h  tls_data.h  wamr_ext_syscall.h  wamr_syscall.h
wamr-ext-libc/musl-internal/: stdio_impl.h
wamr-ext-libc/musl-internal/process/: fdop.h
wamr-ext-libc/src/: cxa_exception.c  cxxabi.c  filesystem.c  main.c  malloc.c  process.c  pthread.c  pthread_ext.c  signal.c  socket_api.c  string.c  sysconf.c  user_group.c  utility.c  wamr_ext.c
